# SPWS

./: CMakeLists.txt  README.md
spws/: CMakeLists.txt
spws/source/: main.cpp
spws/source/config/: body.cpp  body.hpp  parser.cpp  parser.hpp  syntax.hpp
spws/source/core/: application.cpp  application.hpp
spws/source/net/: server.cpp  server.hpp  session.cpp  session.hpp
spws/source/network/: cache.cpp  cache.hpp  server.cpp  server.hpp  session.cpp  session.hpp
